# danbooru_downloader

./: .gitignore  README.md  pyproject.toml  setup.cfg
danbooru_downloader/: download.py  main.py  scraping.py
