[tool.poetry]
name = "danbooru-downloader"
version = "0.1.0"
description = "Downloader for danbooru.donmai.us"
authors = ["kaki"]
license = "MIT"
readme = "README.md"
packages = [{include = "danbooru_downloader"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
lxml = "^4.9.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
